Fixed dashboard align issue.

--- a/app/styles/overrides/_overrides.less
+++ b/app/styles/overrides/_overrides.less
@@ -976,6 +976,9 @@ a {
 
 .totals-table {
 
+  float: right;
+  width: 10px; /* Align right */
+
   tbody {
 
     tr {
